--- a/client/src/styling/theme.config
+++ b/client/src/styling/theme.config
@@ -9,7 +9,7 @@
 @reset      : 'default';
 
 /* Elements */
-@button     : 'material';
+@button     : 'default';
 @container  : 'default';
 @divider    : 'default';
 @flag       : 'default';
